--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,8 @@
+/*
+ * Libit保留所有版权，如有疑问联系QQ：308062035
+ * Copyright (c) 2016.
+ */
+
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
@@ -9,7 +14,7 @@ android {
         applicationId "com.lrcall.appbst"
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 1063
+        versionCode 1065
         versionName "1.0.6"
         ndk {
             moduleName "appbstsdk"
