1,增加查询历史消息; 2,消息可以设置有效期内的每天弹出一次; 3,普通商品支持二维码分享; 4,支持二维码分享注册;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -189,6 +189,9 @@
             android:name="com.lrcall.ui.ActivityShopList"
             android:label="@string/title_activity_shop_list"/>
         <activity
+            android:name="com.lrcall.ui.ActivityShare"
+            android:label="@string/title_activity_share"/>
+        <activity
             android:name="com.lrcall.ui.ActivityWebView">
             <!-- 拦截打开网址请求 -->
             <!--<intent-filter>-->
