--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+#
+# Libit保留所有版权，如有疑问联系QQ：308062035
+# Copyright (c) 2016.
+#
+
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
@@ -18,3 +23,4 @@
 # org.gradle.parallel=true
 #设置可以使用旧版的NDK
 android.useDeprecatedNdk=true
+android.overridePathCheck=true
