--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "com.lrcall.appbst"
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 1092
+        versionCode 1096
         versionName "1.0.9"
         ndk {
             moduleName "appbstsdk"
@@ -24,6 +24,7 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
+            jni.srcDirs = []
         }
     }
 
@@ -33,7 +34,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            jniDebuggable true
+            jniDebuggable false
         }
     }
     lintOptions {
