--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -192,6 +192,12 @@
             android:name="com.lrcall.ui.ActivityShare"
             android:label="@string/title_activity_share"/>
         <activity
+            android:name="com.lrcall.ui.ActivityReferrerUserList"
+            android:label="@string/title_activity_referrer_user_list"/>
+        <activity
+            android:name="com.lrcall.ui.ActivityUserSharePorfitList"
+            android:label="@string/title_activity_user_share_profit_list"/>
+        <activity
             android:name="com.lrcall.ui.ActivityWebView">
             <!-- 拦截打开网址请求 -->
             <!--<intent-filter>-->
@@ -380,6 +386,43 @@
                     android:scheme="zxing"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.google.zxing.client.android.book.SearchBookContentsActivity"
+            android:label="@string/sbc_name"
+            android:screenOrientation="sensorLandscape"
+            android:stateNotNeeded="true">
+            <intent-filter>
+                <action android:name="com.google.zxing.client.android.SEARCH_BOOK_CONTENTS"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.google.zxing.client.android.share.ShareActivity"
+            android:screenOrientation="user"
+            android:stateNotNeeded="true">
+            <intent-filter>
+                <action android:name="com.google.zxing.client.android.SHARE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.google.zxing.client.android.history.HistoryActivity"
+            android:label="@string/history_title"
+            android:stateNotNeeded="true"/>
+        <activity
+            android:name="com.google.zxing.client.android.share.BookmarkPickerActivity"
+            android:label="@string/bookmark_picker_name"
+            android:stateNotNeeded="true"/>
+        <activity
+            android:name="com.google.zxing.client.android.share.AppPickerActivity"
+            android:label="@string/app_picker_name"
+            android:stateNotNeeded="true"/>
+        <activity
+            android:name="com.google.zxing.client.android.HelpActivity"
+            android:label="@string/menu_help"
+            android:screenOrientation="user"
+            android:stateNotNeeded="true"/>
+
         <provider
             android:name="com.lrcall.db.DataBaseProvider"
             android:authorities="lr_bst.db"
