--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 <manifest
     package="com.lrcall.appbst"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_CALL_LOG"/>
@@ -96,6 +97,7 @@
             android:name="com.amap.api.v2.apikey"
             android:value="ffc26ecb301d4dfde3f9d0770e3915ea">
         </meta-data>
+
         <activity
             android:name="com.lrcall.ui.ActivitySplash"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
@@ -192,6 +194,15 @@
         <activity
             android:name="com.lrcall.ui.ActivityReferrerUserList"
             android:label="@string/title_activity_referrer_user_list"/>
+        <activity
+            android:name="com.lrcall.ui.ActivityAgentUserList"
+            android:label="@string/title_activity_agent_user_list"/>
+        <activity
+            android:name="com.lrcall.ui.ActivityUserReferrerInfo"
+            android:label="@string/title_activity_user_referrer_info"/>
+        <activity
+            android:name="com.lrcall.ui.ActivityUserAgentSharePorfitList"
+            android:label="@string/title_activity_user_agent_share_profit_list"/>
         <activity
             android:name="com.lrcall.ui.ActivityUserSharePorfitList"
             android:label="@string/title_activity_user_share_profit_list"/>
@@ -316,6 +327,7 @@
         <activity
             android:name="com.lrcall.ui.shop.ActivityShopChooseAgentProduct"
             android:label="@string/title_activity_choose_agent_product"/>
+
         <service android:name="com.lrcall.services.AutoAnswerIntentService"/>
         <service android:name="com.lrcall.services.AutoAnswerIntentService2"/>
         <!-- alipay sdk begin -->
@@ -340,8 +352,10 @@
             <!-- Allow web apps to launch Barcode Scanner by linking to http://zxing.appspot.com/scan. -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+
                 <data
                     android:host="zxing.appspot.com"
                     android:path="/scan"
@@ -350,8 +364,10 @@
             <!-- We also support a Google Product Search URL. -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+
                 <data
                     android:host="www.google.com"
                     android:path="/m/products/scan"
@@ -360,8 +376,10 @@
             <!-- And the UK version. -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+
                 <data
                     android:host="www.google.co.uk"
                     android:path="/m/products/scan"
@@ -370,8 +388,10 @@
             <!-- Support zxing://scan/?... like iPhone app -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+
                 <data
                     android:host="scan"
                     android:path="/"
@@ -414,6 +434,7 @@
             android:label="@string/menu_help"
             android:screenOrientation="user"
             android:stateNotNeeded="true"/>
+
         <provider
             android:name="com.lrcall.db.DataBaseProvider"
             android:authorities="lr_bst.db"
